Fix calendar day on iOS.

--- a/src/components/presentational/CalendarDay/CalendarDay.css
+++ b/src/components/presentational/CalendarDay/CalendarDay.css
@@ -27,6 +27,7 @@
 }
 
 .mdhui-calendar-day-value {
+    position: relative;
     background: #DBDBDB;
     height: 40px;
     width: 40px;
